# px4-gzsim-plugins

./: CMakeLists.txt  Dockerfile  README.md  build.sh  setup.bash
include/: common.h  gazebo_mavlink_interface.h  groundtruth_plugin.h  groundtruth_plugin.hh  harmonic_collision.h  mavlink_interface.h
msgs/: Groundtruth.proto  custom_message.proto
src/: gazebo_mavlink_interface.cpp  groundtruth_plugin.cc  groundtruth_plugin.cpp  harmonic_collision.cpp  mavlink_interface.cpp
